# ion-cannon

./: .gitignore  README.md  pyproject.toml
src/ion_cannon/: __init__.py  __main__.py  main.py
src/ion_cannon/collectors/: base.py  reddit.py  rss.py
src/ion_cannon/config/: logging_config.py  settings.py
src/ion_cannon/core/: collector.py  llm_factory.py
src/ion_cannon/processors/: base.py  summarizer.py  validator.py
